--- a/.github/workflows/tauri.yml
+++ b/.github/workflows/tauri.yml
@@ -25,8 +25,12 @@ jobs:
         uses: actions-rs/toolchain@v1.0.7
         with:
           toolchain: stable
+      - name: Install cinny dependencies
+        run: cd cinny && npm ci
+      - name: Install tauri dependencies
+        run: npm ci
       - name: Build desktop app with Tauri
-        uses: tauri-apps/tauri-action@dev
+        uses: tauri-apps/tauri-action@v0.3.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
@@ -86,7 +90,7 @@ jobs:
       - name: Install tauri dependencies
         run: npm ci
       - name: Build desktop app with Tauri
-        uses: tauri-apps/tauri-action@dev
+        uses: tauri-apps/tauri-action@v0.3.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
@@ -139,7 +143,7 @@ jobs:
       - name: Install tauri dependencies
         run: npm ci
       - name: Build desktop app with Tauri
-        uses: tauri-apps/tauri-action@dev
+        uses: tauri-apps/tauri-action@v0.3.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
@@ -191,7 +195,7 @@ jobs:
   #     - name: Install rustup target aarch64 darwin
   #       run: rustup target add aarch64-apple-darwin
   #     - name: Build desktop app with Tauri
-  #       uses: tauri-apps/tauri-action@dev
+  #       uses: tauri-apps/tauri-action@v0.3.1
   #       env:
   #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   #         TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
