--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -64,7 +64,7 @@ jobs:
           NETLIFY_DEPLOY_TO_PROD: true
 
   push-to-dockerhub:
-    name: Push Docker image to Docker Hub
+    name: Push Docker image to Docker Hub, ghcr
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -80,11 +80,18 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to the Container registry
+        uses: docker/login-action@v2.0.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GIT_TOKEN }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4.0.1
-        with:
-          images: ajbura/cinny
+        with: |
+          ${{ secrets.DOCKER_USERNAME }}/cinny
+          ghcr.io/${{ github.repository }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v3.1.1
         with:
