--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "Ajay Bura",
   "license": "MIT",
   "dependencies": {
+    "@capacitor/android": "4.2.0",
+    "@capacitor/core": "4.2.0",
+    "@capacitor/ios": "4.2.0",
     "@fontsource/inter": "4.5.12",
     "@fontsource/roboto": "4.5.8",
     "@khanacademy/simple-markdown": "0.8.3",
@@ -50,6 +53,7 @@
     "@babel/core": "7.19.0",
     "@babel/preset-env": "7.19.0",
     "@babel/preset-react": "7.18.6",
+    "@capacitor/cli": "4.2.0",
     "assert": "2.0.0",
     "babel-loader": "8.2.5",
     "browserify-fs": "1.0.0",
