--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "html-loader": "4.2.0",
     "html-webpack-plugin": "5.5.0",
     "jest": "29.0.3",
+    "jest-environment-jsdom": "29.1.2",
     "mini-css-extract-plugin": "2.6.1",
     "path-browserify": "1.0.1",
     "sass": "1.55.0",
