--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
-  "defaultHomeserver": 2,
+  "defaultHomeserver": 3,
   "homeserverList": [
     "converser.eu",
     "envs.net",
+    "halogen.city",
     "matrix.org",
     "mozilla.org"
   ],
