--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3.5.1
         with:
-          node-version: lts/hydrogen
+          node-version: 18.12.1
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
