--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=16.0.0"
   },
   "scripts": {
-    "start": "vite --port 8080 --host",
+    "start": "vite",
     "build": "vite build",
     "lint": "yarn check:eslint && yarn check:prettier",
     "check:eslint": "eslint src/*",
@@ -66,6 +66,7 @@
     "prettier": "2.8.1",
     "sass": "1.56.2",
     "typescript": "4.9.4",
-    "vite": "4.0.1"
+    "vite": "4.0.1",
+    "vite-plugin-static-copy": "0.13.0"
   }
 }
