--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,8 +6,7 @@
   "lang": "en-US",
   "display": "standalone",
   "orientation": "portrait",
-  "start_url": "./",
-  "scope": ".",
+  "start_url": "/",
   "background_color": "#fff",
   "theme_color": "#fff",
   "icons": [
