--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "public/res/twemoji"]
-	path = public/res/twemoji
+[submodule "deps/twemoji"]
+	path = deps/twemoji
 	url = https://github.com/twitter/twemoji.git
