--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3.2.0
+        with: 
+          submodules: true
       - name: Setup node
         uses: actions/setup-node@v3.5.1
         with:
