--- a/.github/workflows/docker-pr.yml
+++ b/.github/workflows/docker-pr.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3.2.0
+        with: 
+          submodules: true
       - name: Build Docker image
         uses: docker/build-push-action@v3.2.0
         with:
