--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "twemoji": "14.0.2"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "0.2.3",
     "@rollup/plugin-wasm": "6.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -66,6 +67,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "mini-svg-data-uri": "1.4.4",
     "prettier": "2.8.1",
+    "rollup-plugin-node-polyfills": "0.2.1",
     "sass": "1.56.2",
     "typescript": "4.9.4",
     "vite": "4.0.1",
